--- a/iframetest.html
+++ b/iframetest.html
@@ -1,4 +1,4 @@
-<form action="/action_page.php" method="get">
+<form>
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Last name:</label>
