--- a/iframetest.html
+++ b/iframetest.html
@@ -19,7 +19,6 @@
   })(document, "script", "WebviewSdkScript")
 
   window.webviewSdkInit = function (WebviewSdk) {
-  // the SDK is passed in parameter to this callback
-  // and is also available at `window.WebviewSdk` for convenience
+  console.log("webview sdk init");
 }
 </script>
