--- a/iframetest.html
+++ b/iframetest.html
@@ -1,10 +1,12 @@
-<form>
+<form onsubmit="myFunction()">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   <label for="lname">Last name:</label>
   <input type="text" id="lname" name="lname"><br><br>
   <input type="submit" value="Submit">
 </form>
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
 <script>
   ;(function (d, s, id) {
     var js,
@@ -20,5 +22,15 @@
 
   window.webviewSdkInit = function (WebviewSdk) {
   console.log("webview sdk init");
+}
+$( function() {
+    $( "#datepicker" ).datepicker();
+} );
+
+function myFunction() {
+    window.WebviewSdk.close(
+    () => console.log("success!"),
+    e => console.log("failure", e)
+
 }
 </script>
