--- a/iframetest.html
+++ b/iframetest.html
@@ -30,7 +30,7 @@ $( function() {
 function myFunction() {
     window.WebviewSdk.close(
     () => console.log("success!"),
-    e => console.log("failure", e)
+    e => console.log("failure", e));
 
 }
 </script>
