--- a/iframetest.html
+++ b/iframetest.html
@@ -1,10 +1,3 @@
-<form onsubmit="myFunction()">
-  <label for="fname">First name:</label>
-  <input type="text" id="fname" name="fname"><br><br>
-  <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname"><br><br>
-  <input type="submit" value="Submit">
-</form>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
 <script>
@@ -34,3 +27,7 @@ function myFunction() {
 
 }
 </script>
+<form onsubmit="myFunction()">
+  <p>Date: <input type="text" id="datepicker"></p>
+  <input type="submit" value="Submit">
+</form>
